--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "streamlit==1.28.1",
     "pandas==2.1.1",
     "numpy==1.24.3",
+    "scikit-learn>=1.6.0",
 ]
 
 [project.optional-dependencies]
