--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.28.1
-pandas==2.1.1
-numpy==1.24.3
-scikit-learn>=1.6.0
-pytest==7.4.2
-pytest-cov==4.1.0
-flake8==6.1.0
-black==23.9.1
-isort==5.12.0
+streamlit>=1.28.0
+pandas>=2.1.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+flake8>=6.0.0
+black>=23.9.0
+isort>=5.12.0
