🔧 Integrate Google Analytics with keepalive functionality
✨ Features added:
- Google Analytics 4 integration with GDPR compliance
- Keepalive options in Streamlit config (runOnSave, auto file watcher)
- Enhanced event tracking for ML features:
  • Model training interactions
  • Clustering analysis views
  • Code examples engagement
- Error handling to prevent app crashes
- Debug mode enabled for development

🔧 Technical details:
- Added GA tracking to main app.py
- Enhanced Streamlit config with keepalive options
- Event tracking with try/catch error handling
- Ready for production with actual GA tracking ID

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,6 +7,9 @@ textColor = "#262730"
 [server]
 headless = true
 port = 8501
+runOnSave = true
+fileWatcherType = "auto"
+maxUploadSize = 200
 
 [browser]
 gatherUsageStats = false
